syntax = "proto3";
import "modelcommon.proto";
package ordermonitor;


message CancelAllOrdersForOriginatorIdParams {
    string originatorId = 1;
}

service OrderMonitor{
    rpc CancelAllOrdersForOriginatorId(CancelAllOrdersForOriginatorIdParams) returns (model.Empty) {};
} 


